Update with remote theme

--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ volume: 78
 published: 2017-10-18
 layout: proceedings
 series: Proceedings of Machine Learning Research
+issn: 2640-3498
 id: corl2017
 month: 0
 cycles: false
@@ -39,8 +40,11 @@ baseurl: "/v78"
 twitter_username: MLResearchPress
 github_username: mlresearch
 markdown: kramdown
+plugins:
+- jekyll-remote-theme
+remote_theme: lawrennd/proceedings
 permalink: "/:title.html"
-github:
+ghub:
   edit: true
   repository: v78
 display:
@@ -61,5 +65,6 @@ conference:
 analytics:
   google:
     tracking_id: UA-92432422-1
+orig_bibfile: "/Users/neil/mlresearch/bibtex.bib"
 # Site settings
-# Auto generated from /Users/mreid/mlresearch/v78/corl2017.bib
+# Original source:  /Users/neil/mlresearch/bibtex.bib
