--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,7 @@ year: '2017'
 volume: 78
 published: 2017-10-18
 layout: proceedings
+publisher: PMLR
 series: Proceedings of Machine Learning Research
 issn: 2640-3498
 id: corl2017
