--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 ---
 booktitle: Proceedings of the 1st Annual Conference on Robot Learning
+orig_bibfile: "/Users/neil/mlresearch/bibtex.bib"
 shortname: CoRL
 start: 2017-11-13
 end: 2017-11-15
@@ -43,6 +44,10 @@ baseurl: "/v78"
 twitter_username: MLResearchPress
 github_username: mlresearch
 markdown: kramdown
+exclude:
+- README.md
+- Gemfile
+- ".gitignore"
 style: pmlr
 plugins:
 - jekyll-feed
@@ -71,6 +76,5 @@ conference:
 analytics:
   google:
     tracking_id: UA-92432422-1
-orig_bibfile: "/Users/neil/mlresearch/bibtex.bib"
 # Site settings
 # Original source:  /Users/neil/mlresearch/bibtex.bib
